--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==4.0.0"
 psycopg2 = "*"
 django-heroku = "*"
 gunicorn = "*"
@@ -15,6 +15,12 @@ weasyprint = "*"
 django-translation-manager = "*"
 popper = "*"
 python-gettext = "*"
+django-user-sessions = "*"
+asyncio = "*"
+channels = "==3.0.4"
+django-celery-results = "*"
+celery = "*"
+django-celery-beat = "*"
 
 [dev-packages]
 
